<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Felux</string>
    <string name="title_scene_detail" >Scene Detail</string>
    <string name="title_show_list" >Show</string>
    <string name="title_cue_list" >Cues</string>
    <string name="title_scene_list" >Scenes</string>
    <string name="title_light_list" >Lights</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="light_types_label">Select a light type</string>
    <string name="select_light_label">Select lights for this scene</string>
    <string name="select_scene_label">Select scenes for this cue</string>
    <string name="detail_name_label">Name:</string>
    <string name="scene_detail_hold_label">Hold:</string>
    <string name="light_scene_detail_fade_label">Fade:</string>
    <string name="light_detail_type_label">Type:</string>
    <string name="light_detail_universe_label">Universe:</string>
    <string name="light_detail_addr_label">Address:</string>
    <string name="light_detail_start_addr_label">Start Address:</string>
    <string name="light_detail_end_addr_label">End Address:</string>
    <string name="light_detail_state_label">State:</string>
    <string name="light_type_basic">Basic</string>
    <string name="light_type_group">Group</string>
    <string name="light_type_color">Color</string>
    <string name="light_type_switch">Switch</string>
    <string-array name="light_types">
        <item>@string/light_type_basic</item>
        <item>@string/light_type_group</item>
        <item>@string/light_type_color</item>
        <item>@string/light_type_switch</item>
    </string-array>
    <string name="scene_types_label">Select a scene type</string>
    <string name="scene_lights_select_prompt">Select the lights for this scene</string>
    <string name="scene_detail_lights_label">Lights:</string>
    <string name="scene_detail_note_label">Note:</string>
    <string name="scene_detail_velocity_label">Velocity:</string>
    <string name="scene_type_light">Light</string>
    <string name="scene_type_midi">MIDI</string>
    <string name="light_scene_detail_lights_label">Lights:</string>
    <string name="light_colorpicker_title">Pick a color</string>
    <string name="light_seekbar_title">Pick a value</string>
    <string name="cue_scene_update_title">Change scene values</string>
    <string name="light_scene_list_row_color_desc">color</string>
    <string name="detail_select_all">Select All</string>
    <string name="light_detail_color_label">Color:</string>
    <string name="light_scene_detail_light_already_added">All lights have already been added</string>
    <string name="cue_detail_no_scenes">No scenes to add</string>
    <string name="midi_scene_detail_note_label">Note:</string>
    <string name="midi_scene_detail_channel_label">Channel:</string>
    <string name="midi_scene_detail_velocity_label">Velocity:</string>
    <string name="midi_scene_detail_event_label">Event:</string>
    <string name="scene_detail_preview_label">Preview</string><string name="cue_hold_label">Hold</string><string name="cue_fade_label">Fade</string><string name="cue_detail_scenes_label">Scenes:</string>
    <string name="light_scene_detail_banner">Light Scene</string>
    <string name="midi_scene_detail_banner">MIDI Scene</string>
    <string name="basic_light_detail_banner">Basic Light</string>
    <string name="group_light_detail_banner">Group Light</string>
    <string name="color_light_detail_banner">Color Light</string>
    <string name="switch_light_detail_banner">Switch Light</string>
    <string name="action_item_add_light_label">Add Light</string>
    <string name="action_item_add_scene_label">Add Scene</string>
    <string name="switch_light_dialog_state_label">State</string>
    <string name="dialog_preview_label">Preview</string>
    <string name="cancelled">cancelled</string>
    <string-array name="scene_types">
        <item>@string/scene_type_light</item>
        <item>@string/scene_type_midi</item>
    </string-array>

</resources>
