<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/midi_scene_detail_banner"
        android:id="@+id/midi_scene_detail_banner"
        android:layout_gravity="left|center_vertical"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scene_detail_preview_label"
            android:id="@+id/midi_scene_detail_preview_button"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_name_label"
                android:id="@+id/midi_scene_detail_name_label"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/midi_scene_detail_name_edit" android:inputType="text" android:singleLine="true" android:textIsSelectable="true"
                android:editable="false"
                android:selectAllOnFocus="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scene_detail_hold_label"
                android:id="@+id/midi_scene_detail_hold_label"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/midi_scene_detail_hold_edit" android:inputType="numberDecimal" android:singleLine="true" android:textIsSelectable="true"
                android:editable="false"
                android:selectAllOnFocus="true"
                android:numeric="decimal"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/midi_scene_detail_channel_label"
        android:id="@+id/midi_scene_detail_channel_label"
        android:layout_marginLeft="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/midi_scene_detail_channel_edit" android:inputType="number" android:singleLine="true" android:textIsSelectable="true"
        android:editable="false"
        android:layout_marginLeft="5dp"
        android:numeric="integer"
        android:selectAllOnFocus="true"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/midi_scene_detail_note_label"
            android:id="@+id/midi_scene_detail_note_label"
            android:layout_marginLeft="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/midi_scene_detail_note_edit" android:inputType="number" android:singleLine="true" android:textIsSelectable="true"
        android:editable="false"
        android:layout_marginLeft="5dp"
        android:numeric="integer"
        android:selectAllOnFocus="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/midi_scene_detail_velocity_label"
        android:id="@+id/midi_scene_detail_velocity_label"
        android:layout_marginLeft="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/midi_scene_detail_velocity_edit" android:inputType="number" android:singleLine="true" android:textIsSelectable="true"
        android:editable="false"
        android:layout_marginLeft="5dp"
        android:numeric="integer"
        android:selectAllOnFocus="true"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/midi_scene_detail_event_label"
        android:id="@+id/midi_scene_detail_event_switch"
        android:layout_gravity="left|center_vertical"
        android:checked="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"/>

</LinearLayout>
