<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_name_label"
            android:id="@+id/light_detail_name_label" android:layout_column="0"
            android:layout_marginRight="5dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/light_detail_name_edit" android:inputType="text" android:singleLine="true" android:textIsSelectable="true"
            android:editable="false" android:layout_column="3"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="5dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/light_detail_type_label" android:id="@+id/light_detail_type_label"
                      android:layout_column="0" android:layout_marginRight="5dp"
                      android:textAlignment="center"
                      android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/light_detail_type_text"
                android:layout_column="3"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginLeft="5dp"
                android:text="@string/light_type_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_detail_addr_label"
                android:id="@+id/light_detail_addr_label"
                android:layout_column="0"
                android:layout_marginRight="5dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>
            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/light_detail_addr_picker"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">
            <com.lifecity.felux.colorpicker.ColorPicker
                android:id="@+id/light_detail_color_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <com.lifecity.felux.colorpicker.SVBar
                android:id="@+id/light_detail_color_svbar"
                android:layout_width="322dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:layout_margin="8dip"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
