<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_name_label"
            android:id="@+id/light_detail_name_label"
            android:layout_marginRight="5dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/light_detail_name_edit" android:inputType="text" android:singleLine="true" android:textIsSelectable="true"
            android:editable="false"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="5dp"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/light_detail_type_label" android:id="@+id/light_detail_type_label"
              android:layout_marginRight="5dp"
              android:textAlignment="center"
              android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/light_detail_type_text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/light_type_basic"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_detail_addr_label"
                android:id="@+id/light_detail_address_label"
                android:layout_marginRight="5dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/light_detail_addr_picker"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/light_detail_light_value_label"
                android:layout_gravity="center"/>

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/light_detail_light_value"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:max="255"
                android:focusableInTouchMode="false"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
