<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group_light_detail_banner"
        android:id="@+id/group_light_detail_banner"
        android:layout_gravity="left|center_vertical"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_name_label"
            android:id="@+id/light_detail_name_label"
            android:layout_marginLeft="5dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/light_detail_name_edit" android:inputType="text" android:singleLine="true" android:textIsSelectable="true"
            android:editable="false"
            android:selectAllOnFocus="true"
            android:layout_marginLeft="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_detail_universe_label"
                android:id="@+id/light_detail_universe_label"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/light_detail_universe_picker"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_detail_start_addr_label"
                android:id="@+id/light_detail_addr_label"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="left|top"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/light_detail_addr_picker"
                android:layout_gravity="center_horizontal|left"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_detail_end_addr_label"
                android:id="@+id/light_detail_end_addr_label"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/light_detail_end_addr_picker"
                android:layout_gravity="center_horizontal|left"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical"
                      android:layout_marginLeft="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/light_detail_light_value_label"
                android:layout_gravity="center"/>

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/light_detail_light_value"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:max="255"
                android:focusableInTouchMode="false"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
